# django-standart

./: .env.dist  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  cookiecutter.json  docker-compose.yml  pyproject.toml
common/: models.py
config/: __init__.py  urls.py
config/environments/: base.py
config/settings/: installed_apps.py  localization.py
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .dockerignore  .gitlab-ci.yml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.debug.yml  manage.py  pyproject.toml
{{ cookiecutter.project_slug }}/common/: models.py
{{ cookiecutter.project_slug }}/config/: asgi.py  env.py  wsgi.py
{{ cookiecutter.project_slug }}/config/environments/: base.py
{{ cookiecutter.project_slug }}/config/settings/: cache.py  db.py  localization.py  security.py  storage.py
