[tool.poetry]
name = "django-standart-template"
version = "0.0.1"
description = "This template make for initialization new django project"
authors = []
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-ninja = "^1.1.0"
django-cors-headers = "^4.3.1"
environs = "^11.0.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.lint.dependencies]
ruff = "^0.4.8"
pre-commit = "^3.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"



[tool.poetry.group.typing.dependencies]
mypy = "^1.10.0"
django-stubs = "^5.0.2"


[tool.poetry.group.debug.dependencies]
debugpy = "^1.8.1"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.environments.base"


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations"
]

line-length = 110
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "single"

exclude = ["config"]

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "lf"

docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
"**/config/**" = ["F403", "E402"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov-report html --cov=. ."
testpaths = [
    "tests",
    "integration",
]

[tool.coverage.run]
omit = [
    "config/*",
    "common/*",
    "manage.py",
    "**/__init__.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
